--- a/fithelp.2/src/components/Header/Header.css
+++ b/fithelp.2/src/components/Header/Header.css
@@ -6,3 +6,15 @@
     width: 10rem;
     height: 3rem;
 }
+.header-menu{
+    list-style: none;
+    /* list style none korlam jate dot ta remove hoye */
+    display: flex;
+    gap:2rem;
+    color: white;
+
+
+}
+.header-menu>li{
+    cursor: pointer;
+}
