--- a/fithelp.2/src/components/Hero/Hero.css
+++ b/fithelp.2/src/components/Hero/Hero.css
@@ -5,12 +5,27 @@
 .left-h{
     padding: 2rem;
     padding-top: 1.5rem;
-    flex: 3
+    flex: 3;
     /* flex 3 left e dilam
     flex 1 right ke dilam
     as left side r width is 3 times more than right side
     */
+
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+
+    
+
+
 }
 .right-h{
     flex: 1
+}
+.the-best-ad{
+    margin-top: 4rem;
+    background-color: #363d42;
+    border-radius: 4rem;
+    
+
 }
