--- a/fithelp.2/src/components/Hero/Hero.css
+++ b/fithelp.2/src/components/Hero/Hero.css
@@ -26,6 +26,26 @@
     margin-top: 4rem;
     background-color: #363d42;
     border-radius: 4rem;
-    
+    width: fit-content;
+    padding: 20px 13px;
+    text-transform: uppercase;
+    color: white;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+}
+.the-best-ad>span{
+    z-index: 2;
+}
+.the-best-ad>div{
+    position: absolute;
+    background-color: var(--orange);
+    width: 5.4rem;
+    height: 80%;
+    left: 8px;
+    border-radius: 3rem;
+    z-index: 1;
 
 }
