--- a/fithelp.2/src/App.css
+++ b/fithelp.2/src/App.css
@@ -21,3 +21,9 @@
 ::-webkit-scrollbar{
   display: none;
 }
+.outline-text{
+  color: transparent;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
+}
