--- a/fithelp.2/src/components/Hero/Hero.css
+++ b/fithelp.2/src/components/Hero/Hero.css
@@ -49,3 +49,14 @@
     z-index: 1;
 
 }
+.hero-text{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    text-transform: uppercase;
+    font-size: 4.5rem;
+    font-weight: bold;
+    color: white;
+    text-overflow: inherit;
+
+}
